# BioLab-Analytics

./: .gitignore  Bio_Lab_Calc_README_MBILAL.docx  LICENSE  README.md  labcalc.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml  tests.yml
biolab_analytics/: cli.py
biolab_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
biolab_analytics/calculators/: cell_culture.py  dilution.py  microbiology.py  molecular_biology.py  sequencing.py  solution_chemistry.py
dashboard/: app.py
docs/: microbiology.md  molecular_biology.md  sequencing.md  solution_chemistry.md
labcalc/: __init__.py  cli.py
tests/: test_calculators.py  test_liquids.py
